--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:all": "bun run build:win && bun run build:linux && bun run build:mac"
   },
   "dependencies": {
+    "escape-latex": "^1.2.0",
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
     "koa-logger": "^4.0.0",
