feat: add Docker support and refactor frontend to separate file
- Add Docker configuration with Dockerfile, docker-compose.yml, and render.yaml
- Create DEPLOYMENT.md with detailed deployment instructions
- Update README.md with Docker deployment sections for local and Render.com
- Move HTML/CSS from index.js to separate index.html file for better separation
- Add system status endpoint with pool statistics and memory usage
- Improve logging with structured messages and license information
- Add bun.lock to .gitignore for Bun package manager
- Refactor server initialization and route handlers for better organization

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "koa-bodyparser": "^4.4.1",
     "koa-logger": "^4.0.0",
     "node-latex": "^3.1.0",
-    "node-pdflatex": "^0.3.0"
+    "node-pdflatex": "^0.3.0",
+    "uuid": "^13.0.0"
   },
   "compilerOptions": {
     "esModuleInterop": true,
